src/recipe/snapshots/rattler_build__recipe__parser__tests__context_value_not_scalar.snap
---
source: src/recipe/parser.rs
assertion_line: 287
expression: err
---
  × Failed to parse recipe

Error:   × Parsing: expected a scalar value.
   ╭─[2:1]
 2 │         context:
 3 │           key: ["not-scalar"]
   ·                ───────┬──────
   ·                       ╰── here
 4 │ 
   ╰────
  help: `context` values must always be scalars

